# empty-repo

./: .gitignore  GUI_client.py  README.md  client.py  fluxtesting.py  pyproject.toml  requirements.txt
omni_agent/: __init__.py  config.py  context.py
omni_agent/agent/: agent.py
omni_agent/cli/: __main__.py  main.py
omni_agent/llm/: __init__.py  ollama_client.py
omni_agent/storage/: __init__.py  conversations.py
omni_agent/tools/: __init__.py  clearnet.py  fs_tools.py  local_files.py  python_exec.py  tor_tools.py
omni_agent/tor/: __init__.py  tor_client.py
omni_agent/utils/: __init__.py  http.py  text.py  timeutils.py
templates/gui/: app.html  index.html  settings.html
